# tda

./: Cargo.toml  README.md
common/src/: dense.rs  lib.rs  sparse.rs
complex/: Cargo.toml  TODO.md
complex/benches/: vr.rs
complex/src/: ITERATOR_ISSUE.md  lib.rs  simplex.rs  simplex_trie.rs  simplex_trie_arena.rs  simplex_trie_cycle.rs  simplex_trie_ptr.rs  vietoris_rips.rs
distance/: Cargo.toml  TODO.md
distance/benches/: dist.rs  f64_specialization.rs
distance/src/: dist.rs  lib.rs  neighborhood.rs  point_cloud.rs
distance/src/backend/: backend.rs  mod.rs  native.rs  wgpu.rs
examples/: circles.csv  noisy_circles.csv
homology/: Cargo.toml
homology/src/: boundary.rs  lib.rs  reduction.rs
src/: lib.rs  main.rs
tda-complices/: Cargo.toml
tda-complices/src/: lib.rs
tda-complices/src/rips/: naive.rs
tda-complices/src/viz/: graphviz.rs
viz/: Cargo.toml
viz/src/: graphviz.rs  lib.rs
