[package]
name = "tda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
[dependencies]
common = { path = "common" }
distance = { path = "distance" }
complex = { path = "complex" }
viz = { path = "viz" }
homology = { path = "homology" }

csv = "1.1.6"
